fix(header): fix overflow

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   gap: 80px;
   position: relative;
+  overflow: hidden;
 
   .header-pattern {
     position: absolute;
